# gpt-retrieval-api

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: __init__.py  chat.py  indexer.py
app/api/endpoints/: chat.py
app/services/: chat_service.py  indexer_service.py
